Little fix for hr's on mobile

--- a/WebApp/public/css/main.css
+++ b/WebApp/public/css/main.css
@@ -36,7 +36,8 @@ a:hover {
 hr {
 	border: 0;
 	height: 2px;
-	width: 900px;
+	max-width: 900px;
+	width: 70vw;
 	clear: left;
 	margin: 5px auto;
 
